--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@ body {
 /* Header Section */
 .header {
     text-align: center;
+    font-size: 350%;
     padding: 50px 20px;
     background-color: #264653;
     background-image: url('https://wallpapercave.com/wp/wp8427333.jpg');
